--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
     ],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^ps-react(.*)$": "<rootDir>/src/components$1"
     },
     "moduleFileExtensions": [
       "web.js",
